# standalone_c_cpp

./: .gitignore
Newton-Raphson_Iteration/src/: Newton-Raphson_Iterator_v0.cpp  Newton-Raphson_Iterator_v1.cpp  Newton-Raphson_Iterator_v2[SANDBOX].cpp
architecture/: main.c
architecture/_optimise/: arm_dumped.s  dumparm.sh  main.c
architecture/_unittest/: main.c
architecture/arm/: arm.dump  dumparm.sh
architecture/avr/: avr.dump  dumpavr.sh  main.c
architecture/x86/: dump86.sh  x86.dump
architecture/x86-64/: dump64.sh  x86-64.dump
arm/: arm.dump  dumparm.sh  main.c  x86.dump
consolegames/graphics/: main.c
consolegames/test/: main.c
i2c_tests_samd21/: master.c  slave.c
i2c_tests_samd21/baud/: baudcalc.c
old/codeblocks/: ArrayTries.cpp  CopyPasteMazeSolving.cpp  EOF_test.c  Fibonacci.c  HelloWorldWithJokes.c  Kalan.c  Lab11_2.c  Lab3Task1.c  Lab4_1.c  Lab4_1_Advanced.c  Lab4_1_evenMoreAdvanced.c  Lab4_2.c  Lab4_2_advanced.c  Lab4_2_unnecessarlyComplicated.c  Lab5_1.c  Lab5_2.c  Lab6_1(2).c  Lab6_1.c  Lab7_1.c  Lab8_1.c  Lab9_1.c  Lab9_2.c  Loops.c  MAZE10_loop.h  MAZE20_loop.h  MAZE20_simple.h  MAZE40.h  MAZE40_noLoops.h  MAZE_E_1.h  MAZE_E_2.h  MAZE_E_3.h  MAZE_E_4.h  Maze.cpp  MazeGenerator.cpp  MazeRunner(loops).cpp  (+143 more)
raspifgetstest/: test.c
static_platform_samd/: PinLayouts.h  main.ino
struct_packing/: test1.c
test/cmake_manual/: CMakeLists.txt  clear_all_output.sh
test/cmake_manual/include/: test.h
test/cmake_manual/src/: CMakeLists.txt  first.c  second.c
test/cmake_manual/test/: CMakeLists.txt  test.c
unimportant_test/: main.c
(+509 files in other folders)
